<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="placeholder_txt">Placeholder</string>
    <string name="title_txt">Title</string>
    <string name="platform__txt">Platform</string>
    <string name="day_txt">Day</string>
    <string name="month_txt">Month</string>
    <string name="year_txt">Year</string>
    <string name="add_txt">Add Game</string>
</resources>